# deepspec

./: .gitignore  eval.py  pyproject.toml  requirements.txt
deepspec/eval/dspark/: evaluator.py
deepspec/eval/eagle3/: evaluator.py
deepspec/trainer/: base_trainer.py  eagle3_trainer.py
deepspec/utils/: __init__.py  io.py
scripts/data/: README.md  download_and_split.py  launch_sglang_server.sh  prepare_data.sh
scripts/train/: train.sh
